--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*html {
+html {
     background-image: ;
     background-color: #9fb9de;
     background-position: center center;
@@ -19,10 +19,7 @@ body {
     background: transparent !important;
     margin-bottom: 0px !important;
     background-color: rgba(255,255,255,0.5) !important;
-    /padding: 40px !important;
-    /min-height: 80%;  /* Fallback for browsers do NOT support vh unit */
-    /min-height: 80vh; /* These two lines are counted as one :-)       */
 }
 .container {
-    /padding: 0 !important;
+    padding: 0 !important;
 }
