--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,20 @@ body {
     background: #fff;
     border: none !important;
     color: #000;
+    display: block;
+    margin: auto;
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
+}
+.train-info button:hover {
+    color: #000;
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
+}
+.train-info button:hover::after {
+    content: ' - CHOO CHOO';
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
 }
 .train-info button:hover {
     background: rgba(255,255,255,0.5);
